tests/src/frontend/typechecking/invalid/concrete_tuple_lambda.sk
fun foo(): void {
  t = (42, 42);
  f = () -> 42;
  _ = Array[t, f]
}
